--- a/TimeBoxer/MainPage.xaml
+++ b/TimeBoxer/MainPage.xaml
@@ -11,19 +11,19 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="StartBtn" Content="Start" HorizontalAlignment="Left" Height="36" Margin="10,134,0,0" VerticalAlignment="Top" Width="160" Click="controlBtn_Click"/>
-        <Button x:Name="StopBtn" Content="Reset" HorizontalAlignment="Left" Height="36" Margin="190,134,0,0" VerticalAlignment="Top" Width="160" Click="stopBtn_Click"/>
-        <Button x:Name="ManipulateBtn1" Content="-1m" HorizontalAlignment="Left" Height="36" Margin="10,188,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn1_Click"/>
-        <Button x:Name="ManipulateBt2" Content="+1m" HorizontalAlignment="Left" Height="36" Margin="127,188,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBt2_Click"/>
-        <Button x:Name="ManipulateBtn3" Content="+2m" HorizontalAlignment="Left" Height="36" Margin="249,188,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn3_Click"/>
-        <Button x:Name="ManipulateBtn4" Content="+5m" HorizontalAlignment="Left" Height="36" Margin="10,242,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn4_Click"/>
-        <Button x:Name="ManipulateBtn5" Content="+15m" HorizontalAlignment="Left" Height="36" Margin="127,242,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn5_Click"/>
-        <Button x:Name="ManipulateBtn6" Content="+30m" HorizontalAlignment="Left" Height="36" Margin="249,242,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn6_Click"/>
-        <Button x:Name="ManipulateBtn7" Content="+1h" HorizontalAlignment="Left" Height="36" Margin="10,296,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn7_Click"/>
-        <Button x:Name="ManipulateBtn8" Content="+2h" HorizontalAlignment="Left" Height="36" Margin="126,296,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn8_Click"/>
-        <Button x:Name="ManipulateBtn9" Content="+5h" HorizontalAlignment="Left" Height="36" Margin="249,296,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn9_Click"/>
-        <TextBox x:Name="Screen" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Height="107" Width="339" FontFamily="Segoe WP Black" FontSize="55" FontWeight="Bold" HorizontalAlignment="Left" TextAlignment="Center" Background="{ThemeResource ToolTipBackgroundThemeBrush}"/>
-        <MediaElement x:Name="MediaElement" HorizontalAlignment="Left" Height="100" Margin="24,122,0,0" VerticalAlignment="Top" Width="100" Visibility="Collapsed"/>
+        <Button x:Name="startBtn" Content="Start" HorizontalAlignment="Left" Height="36" Margin="10,134,0,0" VerticalAlignment="Top" Width="160" Click="controlBtn_Click"/>
+        <Button x:Name="stopBtn" Content="Reset" HorizontalAlignment="Left" Height="36" Margin="190,134,0,0" VerticalAlignment="Top" Width="160" Click="stopBtn_Click"/>
+        <Button x:Name="manipulateBtn1" Content="-1m" HorizontalAlignment="Left" Height="36" Margin="10,188,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn1_Click"/>
+        <Button x:Name="manipulateBt2" Content="+1m" HorizontalAlignment="Left" Height="36" Margin="127,188,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBt2_Click"/>
+        <Button x:Name="manipulateBtn3" Content="+2m" HorizontalAlignment="Left" Height="36" Margin="249,188,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn3_Click"/>
+        <Button x:Name="manipulateBtn4" Content="+5m" HorizontalAlignment="Left" Height="36" Margin="10,242,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn4_Click"/>
+        <Button x:Name="manipulateBtn5" Content="+15m" HorizontalAlignment="Left" Height="36" Margin="127,242,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn5_Click"/>
+        <Button x:Name="manipulateBtn6" Content="+30m" HorizontalAlignment="Left" Height="36" Margin="249,242,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn6_Click"/>
+        <Button x:Name="manipulateBtn7" Content="+1h" HorizontalAlignment="Left" Height="36" Margin="10,296,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn7_Click"/>
+        <Button x:Name="manipulateBtn8" Content="+2h" HorizontalAlignment="Left" Height="36" Margin="126,296,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn8_Click"/>
+        <Button x:Name="manipulateBtn9" Content="+5h" HorizontalAlignment="Left" Height="36" Margin="249,296,0,0" VerticalAlignment="Top" Width="100" Click="manipulateBtn9_Click"/>
+        <TextBox x:Name="screen" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Height="107" Width="339" FontFamily="Segoe WP Black" FontSize="55" FontWeight="Bold" HorizontalAlignment="Left" TextAlignment="Center" Background="{ThemeResource ToolTipBackgroundThemeBrush}"/>
+        <MediaElement x:Name="mediaElement" HorizontalAlignment="Left" Height="100" Margin="24,122,0,0" VerticalAlignment="Top" Width="100" Visibility="Collapsed"/>
 
 
     </Grid>
